test/tests/stages/9_functions/valid/arguments_in_registers/expression_args.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: sub
        List[2]: 
          TIdentifier: a
          TIdentifier: b
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CSubtract: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CVar: 
                    TIdentifier: b
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Int: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: sum
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: sub
                      List[2]: 
                        CBinary: 
                          CAdd: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          None: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: sum
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
